--- a/Beerus.html
+++ b/Beerus.html
@@ -3,12 +3,22 @@
         <meta charset="utf-8" />
          <link rel="Stylesheet" type="text/css" href="Beerus.css"/>
         <title> Dragonball </title>
+
     </head>
     <body>
-        <h1>Beerus</h1>
-         <p>
-            Beerus (ビルス Birusu) is the God of Destruction of Universe 7. He is accompanied by his martial arts teacher and attendant, Whis. Beerus' twin brother is Champa, the God of Destruction of Universe 6.
-        </P>
+        <button onclick="goBack()">Go Back</button>
+            <script>
+            function goBack() {
+                    window.history.back()
+            }
+            </script>
 
+        <h1>Beerus</h1>
+        <div>
+                <img class="img_align" src="https://qph.fs.quoracdn.net/main-qimg-d5fc56cd3541f7c3922b5f7a651813d7" alt="">
+            </div>
+         <span>
+               Beerus (ビルス Birusu) is the God of Destruction of Universe 7. He is accompanied by his martial arts teacher and attendant, Whis. Beerus' twin brother is Champa, the God of Destruction of Universe 6.        </P>
+        </span>
     </body>
 </html>
