--- a/One Piece.html
+++ b/One Piece.html
@@ -9,11 +9,11 @@
   <li><a href="Naruto.html">Naruto</a></li>
   <li><a href="One Piece.html">One Piece</a></li>
   <li><a href="Dragonball.html">Dragonball</a></li>
-                <li><a href="http://127.0.0.1:50711/index.html">home</a></li>
+                <li><a href="Home.html">Home</a></li>
 </ul>
        <div>
         <figure>
-            <a href="Luffy.html" target="_BLANK"><img src="https://vignette.wikia.nocookie.net/onepiece/images/6/6d/Monkey_D._Luffy_Anime_Post_Timeskip_Infobox.png" width="100" height="100" /a> 
+            <a href="Luffy.html" target="_self"><img src="https://vignette.wikia.nocookie.net/onepiece/images/6/6d/Monkey_D._Luffy_Anime_Post_Timeskip_Infobox.png" width="100" height="100" /a> 
             <figcaption>Luffy</figcaption>
             </figure>
 
