--- a/Uzumaki.html
+++ b/Uzumaki.html
@@ -1,2 +1,25 @@
-<h1>Naruto Uzumaki</h1>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+         <link rel="Stylesheet" type="text/css" href="Beerus.css"/>
+        <title> Naruto </title>
+
+    </head>
+    <body>
+        <button onclick="goBack()">Go Back</button>
+            <script>
+            function goBack() {
+                    window.history.back()
+            }
+            </script>
+
+        <h1>Uzumaki</h1>
+        <div>
+                <img class="img_align" src="https://img00.deviantart.net/6fd0/i/2012/148/f/1/naruto___my_fire_of_your_death_by_haurin-d51fh8l.png" alt="">
+            </div>
+         <span>
+               <h1>Naruto Uzumaki</h1>
 Naruto Uzumaki (うずまきナルト, Uzumaki Naruto) is a shinobi of Konohagakure and a descendant of the Uzumaki clan. He became the jinchūriki of the Nine-Tails on the day of his birth — a fate that caused him to be shunned by most of Konoha throughout his childhood. After joining Team Kakashi, Naruto worked hard to gain the village's acknowledgement all the while chasing his dream to become Hokage. In the following years, through many hardships and ordeals, he became a capable ninja regarded as a hero both by the villagers, and soon after, the rest of the world, becoming known as the Hero of the Hidden Leaf (木ノ葉隠れの英雄, Konohagakure no Eiyū, Literally meaning: Hero of the Hidden Tree Leaves). He soon proved to be one of the main factors in winning the Fourth Shinobi World War, leading him to achieve his dream and become the village's Seventh Hokage (七代目火影, Nanadaime Hokage, Literally meaning: Seventh Fire Shadow)
+        </span>
+    </body>
+</html>
