--- a/Vegeta.html
+++ b/Vegeta.html
@@ -1,2 +1,26 @@
-Vegeta (ベジータ Bejīta) is the prince of the fallen Saiyan race and the deuteragonist of the Dragon Ball series. He is the eldest son of King Vegeta, the older brother of Tarble, the husband of Bulma, the father of Trunks and Bulla, and the ancestor of Vegeta Jr. Alongside Goku, Gohan, Krillin, and Piccolo, he is easily one of the most prominent characters in the series, receiving more character development after being introduced than a number of other characters.
-Regal, egotistical, and full of pride, Vegeta was once a ruthless, cold-blooded warrior and outright killer,[8] but later abandons his role in the Frieza Force, instead opting to remain and live on Earth, fighting alongside the universe's most powerful warrior, specifically with the mission to defeat and surpass Goku in power.[9] His character evolves from villain, to anti-hero, to a hero through the course of the series.
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+         <link rel="Stylesheet" type="text/css" href="Beerus.css"/>
+        <title> Dragonball </title>
+
+    </head>
+    <body>
+        <button onclick="goBack()">Go Back</button>
+            <script>
+            function goBack() {
+                    window.history.back()
+            }
+            </script>
+
+        <h1>Vegeta</h1>
+        <div>
+                <img class="img_align" src="https://pre00.deviantart.net/a0bf/th/pre/f/2017/045/0/c/0cecdafac42943fff4db302380619718-daz305w.png" alt="">
+            </div>
+         <span>
+             
+               Vegeta (ベジータ Bejīta) is the prince of the fallen Saiyan race and the deuteragonist of the Dragon Ball series. He is the eldest son of King Vegeta, the older brother of Tarble, the husband of Bulma, the father of Trunks and Bulla, and the ancestor of Vegeta Jr. Alongside Goku, Gohan, Krillin, and Piccolo, he is easily one of the most prominent characters in the series, receiving more character development after being introduced than a number of other characters.
+Regal, egotistical, and full of pride, Vegeta was once a ruthless, cold-blooded warrior and outright killer,[8] but later abandons his role in the Frieza Force, instead opting to remain and live on Earth, fighting alongside the universe's most powerful warrior, specifically with the mission to defeat and surpass Goku in power.[9] His character evolves from villain, to anti-hero, to a hero through the course of the series.        </P>
+        </span>
+    </body>
+</html>
