--- a/Dragonball.html
+++ b/Dragonball.html
@@ -12,13 +12,13 @@
   <li><a href="Naruto.html">Naruto</a></li>
   <li><a href="One Piece.html">One Piece</a></li>
   <li><a href="Dragonball.html">Dragonball</a></li>
-  <li><a href="http://127.0.0.1:50711/index.html">home</a></li>
+  <li><a href="Home.html">home</a></li>
 </ul>
         <P> 
             <h1><b>Dragonball</b></h1>
 <div class="bilder">
     <figure>
-    <a href="Goku.html" target="_BLANK"><img src="https://pbs.twimg.com/profile_images/833767319973212161/Ft904pMk_400x400.jpg" width="100" height="100" /a> 
+    <a href="Goku.html" target="_self"><img src="https://pbs.twimg.com/profile_images/833767319973212161/Ft904pMk_400x400.jpg" width="100" height="100" /a> 
     <figcaption>Goku</figcaption>
     </figure>
 
