--- a/Goku.html
+++ b/Goku.html
@@ -1,2 +1,24 @@
-<h1>Goku</h1>
-Son Goku (孫そん悟ご空くう Son Gokū), born Kakarot (カカロット Kakarotto), is a male Saiyan and the main protagonist of the Dragon Ball meta-series created by Akira Toriyama. Cheerful, tenacious, and also a bit naïve, Goku is a Saiyan originally sent to Earth as an infant with the mission to destroy it. However, an accident alters his memory, causing him to grow up pure-hearted and later become Earth's greatest defender, as well as the informal leader of the Dragon Team. Throughout his life, he trains hard and constantly strives to be the greatest warrior possible and to fight stronger opponents, which has kept the Earth and the Universe safe from destruction many times.[14]
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+         <link rel="Stylesheet" type="text/css" href="Beerus.css"/>
+        <title> Dragonball </title>
+
+    </head>
+    <body>
+        <button onclick="goBack()">Go Back</button>
+            <script>
+            function goBack() {
+                    window.history.back()
+            }
+            </script>
+
+        <h1>Goku</h1>
+        <div>
+                <img class="img_align" src="https://pbs.twimg.com/profile_images/833767319973212161/Ft904pMk_400x400.jpg" alt="">
+            </div>
+         <span>
+                Son Goku (孫そん悟ご空くう Son Gokū), born Kakarot (カカロット Kakarotto), is a male Saiyan and the main protagonist of the Dragon Ball meta-series created by Akira Toriyama. Cheerful, tenacious, and also a bit naïve, Goku is a Saiyan originally sent to Earth as an infant with the mission to destroy it. However, an accident alters his memory, causing him to grow up pure-hearted and later become Earth's greatest defender, as well as the informal leader of the Dragon Team. Throughout his life, he trains hard and constantly strives to be the greatest warrior possible and to fight stronger opponents, which has kept the Earth and the Universe safe from destruction many times.[14]        </P>
+        </span>
+    </body>
+</html>
