--- a/Naruto.html
+++ b/Naruto.html
@@ -9,13 +9,13 @@
   <li><a href="Naruto.html">Naruto</a></li>
   <li><a href="One Piece.html">One Piece</a></li>
   <li><a href="Dragonball.html">Dragonball</a></li>
-                <li><a href="http://127.0.0.1:50711/index.html">home</a></li>
+                <li><a href="Home.html">Home</a></li>
 </ul>
 <p>
     <h1>Naruto</h1>
 <div>
     <figure>
-        <a href="Uzumaki.html" target="_BLANK"><img src="https://vignette.wikia.nocookie.net/naruto/images/d/dc/Naruto%27s_Sage_Mode.png" width="100" height="100" /a> 
+        <a href="Uzumaki.html" target="_self"><img src="https://vignette.wikia.nocookie.net/naruto/images/d/dc/Naruto%27s_Sage_Mode.png" width="100" height="100" /a> 
         <figcaption>Naruto</figcaption>
         </figure>
 </div>
